Fix hero overflow

--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -4,7 +4,6 @@
 	width: 100%;
 	text-align: center;
 	color: #141414;
-	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -19,7 +18,7 @@
 }
 
 .info-container {
-	padding: 0px 25vw 70px 25vw;
+	padding: 0px 20vw 70px 20vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
@@ -185,6 +184,10 @@ a {
 }
 
 @media screen and (max-width: 1024px) {
+	.info-container {
+		padding: 0px 10vw 70px 10vw;
+	}
+
 	.decoration_1 {
 		width: 20em;
 		margin-left: -20px;
@@ -236,7 +239,7 @@ a {
 
 @media screen and (max-width: 680px) {
 	.filled {
-		margin-top: 120px;
+		margin-top: 20px;
 		font-size: 80px;
 		line-height: 70px;
 	}
